--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "nanoid": "^5.1.5",
-    "react": "19.0.0-rc-8b08e99e-20240713",
+    "react": "^18.3.1",
     "react-confetti": "^6.4.0",
-    "react-dom": "19.0.0-rc-8b08e99e-20240713",
+    "react-dom": "^18.3.1",
     "vite": "latest"
   },
   "devDependencies": {
